force-app/main/default/objects/vlocity_ps__PriceList__c/vlocity_ps__PriceList__c.object-meta.xml
<CustomObject>
    <description>A price list represents the pricing for the products and services that your company offers. A base price list defines the baseline pricing for your products and services. A child price list inherits all the pricing from the base price list and contains exceptions to the baseline pricing.</description>
    <label>Price List</label>
    <nameField>
        <label>Price List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>