force-app/main/default/objects/vlocity_ps__PriceList__c/fields/vlocity_ps__EffectiveFromDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EffectiveFromDate__c</fullName>
    <label>Effective From</label>
    <type>DateTime</type>
</CustomField>