force-app/main/default/objects/vlocity_ps__PriceList__c/fields/vlocity_ps__EffectiveUntilDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EffectiveUntilDate__c</fullName>
    <label>Effective Until</label>
    <type>DateTime</type>
</CustomField>