force-app/main/default/objects/vlocity_ps__PriceList__c/fields/vlocity_ps__GlobalKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__GlobalKey__c</fullName>
    <description>The globally unique identifier of this Price List. Used to identify the price list across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique price list identifier can be used.</description>
    <externalId>true</externalId>
    <label>Global Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>