force-app/main/default/objects/vlocity_ps__PriceList__c/fields/vlocity_ps__LoyaltyCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LoyaltyCode__c</fullName>
    <label>Loyalty Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>vlocity_ps__LoyaltyCode</valueSetName>
    </valueSet>
</CustomField>