force-app/main/default/objects/vlocity_ps__PriceList__c/fields/vlocity_ps__ParentPriceListId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ParentPriceListId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Price List</label>
    <referenceTo>vlocity_ps__PriceList__c</referenceTo>
    <relationshipLabel>Child Price Lists</relationshipLabel>
    <relationshipName>ChildPriceLists</relationshipName>
    <type>Lookup</type>
</CustomField>