force-app/main/default/objects/vlocity_ps__PriceList__c/validationRules/vlocity_ps__EffectiveFromDate_Greater_UntilDate.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__EffectiveFromDate_Greater_UntilDate</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_ps__EffectiveFromDate__c &gt; vlocity_ps__EffectiveUntilDate__c</errorConditionFormula>
    <errorDisplayField>vlocity_ps__EffectiveUntilDate__c</errorDisplayField>
    <errorMessage>Effective Until Date should be greater than or equal to Effective From Date.</errorMessage>
</ValidationRule>