force-app/main/default/objects/vlocity_ps__PriceList__c/listViews/vlocity_ps__Vlocity_EPC_Price_List.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__Vlocity_EPC_Price_List</fullName>
    <columns>vlocity_ps__IsActive__c</columns>
    <columns>NAME</columns>
    <columns>vlocity_ps__Code__c</columns>
    <columns>vlocity_ps__CountOfActiveEntries__c</columns>
    <columns>vlocity_ps__EffectiveFromDate__c</columns>
    <columns>vlocity_ps__EffectiveUntilDate__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>Vlocity EPC Price List</label>
</ListView>